# my-secretary

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  REVIEW_AGENTCORE.md  pyproject.toml  requirements.md
.claude/: settings.local.json
.github/workflows/: deploy.yml
agent/: .agentcore.json  Dockerfile  config.py  line_handler.py  main.py  requirements.txt  server.py
docs/: deployment-guide.md  google-oauth-setup.md  line-channel-setup.md
functions/calendar/: operations.py  requirements.txt
functions/common/: utils.py
functions/line_webhook/: cognito_auth.py  handler.py  requirements.txt
functions/oauth_callback/: handler.py
infra/: app.py  cdk.json  response.json  test-event.json
infra/.claude/: settings.local.json
infra/stacks/: agentcore_stack.py  cognito_stack.py  github_oidc_stack.py  lambda_stack.py  line_webhook_stack.py  oauth_session_stack.py  secrets_stack.py
scripts/: authenticate_google.py
